5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1721_3067.log
== TEST (2019-05-02 18:18:21) 
-- CODE:
a=imput("ataque espada ou cauda")
b=int(input("numero  "))
c=int(input("nu"))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6)or(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=imput("ataque espada ou cauda")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:18:44) 
-- CODE:
a=input("ataque espada ou cauda")
b=int(input("numero  "))
c=int(input("nu"))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6)or(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:18:52) 
-- CODE:
a=input("ataque espada ou cauda")
b=int(input("numero  "))
c=int(input("nu"))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6)or(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:01) 
-- CODE:
a=input("ataque espada ou cauda")
b=int(input("numero  "))
c=int(input("nu"))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6)or(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:56) 
-- CODE:
a=input("ataque espada ou cauda")
b=int(input("numero  "))
c=int(input("nu"))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6)or(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:20:00) 
-- CODE:
a=input("ataque espada ou cauda")
b=int(input("numero  "))
c=int(input("nu"))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6)or(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:05) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6)or(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:32) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:39) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:48) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:24:03) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="CAUDA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:24:31) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd"))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:24:47) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:25:02) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:25:15) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<1)or(b>6)or(c<1)or(c>6)or(d<1)or(d>6)or(e<1)or(e>6):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:15) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- ERROR:
File "XXXX", line 6
    if(b<=)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:30) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:42) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:52) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:27:08) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:27:35) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!="CAUDA")or(a!="ESPADA"):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:28:08) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!='CAUDA')or(a!='ESPADA'):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:28:26) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!='CAUDA')or(a!='ESPADA'):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:28:55) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!='CAUDA')or(a!='ESPADA'):
	print("Entrada invalida")
elif(a=="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:02) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!=CAUDA)or(a!=ESPADA):
	print("Entrada invalida")
elif(a==CAUDA):
	z=(b+c+d)*e
	print(z)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(a!=CAUDA)or(a!=ESPADA):
NameError: name 'CAUDA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:28) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!='CAUDA')or(a!='ESPADA'):
	print("Entrada invalida")
elif(a="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- ERROR:
File "XXXX", line 10
    elif(a="CAUDA"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:29) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
	print("Entrada invalida")
elif(a!='CAUDA')or(a!='ESPADA'):
	print("Entrada invalida")
elif(a="CAUDA"):
	z=(b+c+d)*e
	print(z)
	
	
-- ERROR:
File "XXXX", line 10
    elif(a="CAUDA"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:17) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(a=="CAUDA")or(a=="ESPADA"):
	if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
		print("Entrada invalida")
	elif(a=="CAUDA"):
		z=(a+c+d)*e
		print(z)
else:
	print("Entrada invalida")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    z=(a+c+d)*e
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:07) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(a=="CAUDA")or(a=="ESPADA"):
	if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
		print("Entrada invalida")
	elif(a=="CAUDA"):
		z=(B+c+d)*e
		print(z)
else:
	print("Entrada invalida")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    z=(B+c+d)*e
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:20) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(a=="CAUDA")or(a=="ESPADA"):
	if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
		print("Entrada invalida")
	elif(a=="CAUDA"):
		z=(b+c+d)*e
		print(z)
else:
	print("Entrada invalida")
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:37:41) 
-- CODE:
a=input("ataque espada ou cauda   ")
b=int(input("numero  "))
c=int(input("nu   "))
d=int(input("dfsdfg "))
e=int(input("fdfgd  "))
if(a=="CAUDA")or(a=="ESPADA"):
	if(b<=0)or(b>=7)or(c<=0)or(c>=7)or(d<=0)or(d>=7)or(e<=0)or(e>=7):
		print("Entrada invalida")
	elif(a=="CAUDA"):
		z=(b+c+d)*e
		print(z)
	elif(a=="ESPADA"):
		z=(b+6)+(c+6)+(d+6)+(e+6)
		print(z)
else:
	print("Entrada invalida")
	
	
-- EXECUTION TIME:
0.124606
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
40
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
36
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
